added h1 to header

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <header>
-        Header
+        <h1>Header</h1>
     </header>
 
     <main>
-
+        Main Section
     </main>
 
     <footer>
-
+        Footer
     </footer>
     <!-- <script type="module" src="index.js"></script> -->
 </body>
 </html>
+`
