initial commit of code cook scaffold

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type="text/css href="main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <h1>Header</h1>
     </header>
+
+    <section>
+        <form id="click-form">
+            <button onClick="submit">Click Me!</button>
+        </form>
+      </section>
 
     <main>
         Main Section
@@ -18,7 +24,7 @@
     <footer>
         Footer
     </footer>
-    <!-- <script type="module" src="index.js"></script> -->
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
-`
+
